20120415
	Added pkg-content and pkg-descr
	Introduced pkg_infos.c to fetch remote informations
	Removed -D_FILE_OFFSET_BITS=64 from Makefile and added it in fsops.c

20120414
	Fire up pkgin 0.6.0
	case: cleanup in summary.c (stacktic)
	Packages list queries ordered differently for display and internals

20120409
	pkgin 0.5.2.3
	Fixed "upgrade too many packages" bug (thanks stacktic)

20111030
	pkgin 0.5.2.2
	Handled misordered PKGNAME/CONFLICTS
	Cleaned up DELETE_REMOTE query (thanks to anhj)

20111024	
	pkgin 0.5.2

20111023
	Various minor fixes from NetBSDfr hackathon
	Moved break_depends() at the end of impact.c to avoid inconsistencies
	Check for real filesystem size to be occuppied by upgrade
	Check for user permissions before update_db
	update_db() returns a status so we can warn simple users
	introduced have_enough_rights(), fixed pkg_keep() perms
	Various return codes fixed to satisfy frontends

20111016
	Don't download packages when repository is a file:// scheme
	Reduce verbosity when marking non-autoremovable packages

20111010
	Keep going if unmet requirements are encountered and warn about
	it before proceeding

20111002
	Always move pkg_install on top of the "to-upgrade" list

20111001
	pkgin now depends on pkgsrc's pkg_install

20110910
	Many changes occured, let's make it 0.5.1
	Log timestamp
	Better handling of pkg_install error logs

20110907
	rec_pkglist() now takes a va_list

20110906
	Added "requires" and "provides" to have a closer look on packages	
	requirements
20110901
	pkg_install's pkgdb not needed anymore for a fresh start (bsdx's idea)

20110831
	Globs can now be passed as an argument for package installation, i.e.
	# pkgin in 'mysql-server<5.1'

20110830
	Export / import a list of packages as requested by wiz@
	Operations tracing flag (-t)

20110828
	Database silent migration
	More flexible check_yesno()
	Made pkgin in / rm yes by default

20110821
	pkgin 0.5.0 in progress
	One struct to rule them all (Pkglist)